@@ -1,0 +1,1 @@
+shim.debian,1,Debian,shim,@DEB_VERSION@,https://tracker.debian.org/pkg/shim
